--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="container">
+        <div class="hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button data-modal-open class="hero__button" type="button">
             Замовити послугу
@@ -66,7 +66,7 @@
         </div>
       </section>
       <section class="benefits">
-        <div class="container">
+        <div class="benefits__container">
           <ul class="benefits__list">
             <li class="benefits__item">
               <div class="benefits__icon">
@@ -119,7 +119,7 @@
         </div>
       </section>
       <section class="section">
-        <div class="container">
+        <div class="section__container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="section__list">
             <li class="section__item section__item_neondesktop">
@@ -141,7 +141,7 @@
         </div>
       </section>
       <section class="team">
-        <div class="container">
+        <div class="team__container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__card">
@@ -292,7 +292,7 @@
         </div>
       </section>
       <section class="client">
-        <div class="container">
+        <div class="client__container">
           <h2 class="client__title">Постійні клієнти</h2>
           <ul class="client__list">
             <li class="client__item">
