--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     </header>
     <main>
       <section class="portfolio">
-        <div class="container">
+        <div class="portfolio__container">
           <ul class="filter__list">
             <li class="filter__item">
               <button
