--- a/index.html
+++ b/index.html
@@ -54,31 +54,16 @@
             </li>
           </ul>
         </div>
-        <div class="menu">
-          <button
-            class="menu__button is-open"
-            aria-expanded="false"
-            data-menu-button
-            aria-controls="menu__container"
-          >
-            <svg
-              class="menu__icon"
-              width="24"
-              height="24"
-              aria-label="Перемикач мобільного меню"
-            >
-              <use
-                class="menu__icon-burger"
-                href="./images/sprite.svg#menu"
-              ></use>
-              <use
-                class="menu__icon-cross"
-                href="./images/sprite.svg#menu-cross"
-              ></use>
-            </svg>
-          </button>
-          <div class="menu__container" id="menu__container" data-menu></div>
-        </div>
+        <button
+          class="menu__toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+          aria-label="Перемикач мобільного меню"
+        >
+          <svg class="menu__toggle_icon" width="24" height="24">
+            <use href="./images/sprite.svg#menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main class="main">
@@ -545,6 +530,60 @@
         </div>
       </div>
     </div>
+
+    <div class="menu__container js-menu-container" id="mobile-menu">
+      <button class="menu__toggle js-close-menu">
+        <svg class="menu__toggle_icon" width="24" height="24">
+          <use href="./images/sprite.svg#menu-cross"></use>
+        </svg>
+      </button>
+      <div class="mobile-menu">
+        <ul class="mobile-menu__nav">
+          <li class="mobile-menu__item">
+            <a href="./" class="mobile-menu__link mobile-menu__link_current"
+              >Студія</a
+            >
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./" class="mobile-menu__link">Контакти</a>
+          </li>
+        </ul>
+        <ul class="mobile-menu__con">
+          <li class="mobile-menu__item">
+            <a
+              href="tel:+380961111111"
+              class="mobile-menu__link mobile-menu__link_tel"
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="mobile-menu__item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="mobile-menu__link mobile-menu__link_mail"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-menu__soc">
+          <li class="mobile-menu__item">
+            <a href="./" target="_blank" class="mobile-menu__link">Instagram</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./" target="_blank" class="mobile-menu__link">Twitter</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./" target="_blank" class="mobile-menu__link">Facebook</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./" target="_blank" class="mobile-menu__link">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <script src="./js/menu.js"></script>
     <script src="./js/speaker.js"></script>
     <!-- <script src="./js/paddingforbody.js"></script> -->
