Небольшие поправки в навигации Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,12 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link nav__link_current" href="./">Студія</a>
+              <a class="nav__link" href="./">Студія</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="./portfolio.html">Портфоліо</a>
+              <a class="nav__link nav__link_current" href="./portfolio.html"
+                >Портфоліо</a
+              >
             </li>
             <li class="nav__item">
               <a class="nav__link" href="./">Контакти</a>
@@ -355,12 +357,14 @@
       <div class="mobile-menu">
         <ul class="mobile-menu__nav">
           <li class="mobile-menu__item">
-            <a href="./" class="mobile-menu__link mobile-menu__link_current"
-              >Студія</a
-            >
+            <a href="./" class="mobile-menu__link">Студія</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a>
+            <a
+              href="./portfolio.html"
+              class="mobile-menu__link mobile-menu__link_current"
+              >Портфоліо</a
+            >
           </li>
           <li class="mobile-menu__item">
             <a href="./" class="mobile-menu__link">Контакти</a>
