--- a/index.html
+++ b/index.html
@@ -155,7 +155,24 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__card">
+              <!-- <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/igor-270.jpg 1x, ./images/igor-540.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/igor-354.jpg 1x, ./images/igor-708.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/igor-450.jpg 1x, ./images/igor-900.jpg 2x"
+                  type="image/jpg"
+                /> -->
               <img src="./images/igor.jpg" alt="Ігор Дем'яненко" />
+              <!-- </picture> -->
               <h2 class="team__name">Ігор Дем'яненко</h2>
               <p class="team__text">Product Designer</p>
               <ul class="team__social-list">
@@ -190,7 +207,24 @@
               </ul>
             </li>
             <li class="team__card">
+              <!-- <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/olga-270.jpg 1x, ./images/olga-540.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/olga-354.jpg 1x, ./images/olga-708.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/olga-450.jpg 1x, ./images/olga-900.jpg 2x"
+                  type="image/jpg"
+                /> -->
               <img src="./images/olga.jpg" alt="Ольга Рєпіна" />
+              <!-- </picture> -->
               <h2 class="team__name">Ольга Рєпіна</h2>
               <p class="team__text">Frontend Developer</p>
               <ul class="team__social-list">
@@ -225,7 +259,33 @@
               </ul>
             </li>
             <li class="team__card">
+              <!-- <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/mykola-270.jpg 1x,
+                    ./images/mykola-540.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/mykola-354.jpg 1x,
+                    ./images/mykola-708.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mykola-450.jpg 1x,
+                    ./images/mykola-900.jpg 2x
+                  "
+                  type="image/jpg"
+                /> -->
               <img src="./images/mykola.jpg" alt="Микола Тарасов" />
+              <!-- </picture> -->
               <h2 class="team__name">Микола Тарасов</h2>
               <p class="team__text">Marketing</p>
               <ul class="team__social-list">
@@ -260,7 +320,33 @@
               </ul>
             </li>
             <li class="team__card">
+              <!-- <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/mykhailo-270.jpg 1x,
+                    ./images/mykhailo-540.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/mykhailo-354.jpg 1x,
+                    ./images/mykhailo-708.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/mykhailo-450.jpg 1x,
+                    ./images/mykhailo-900.jpg 2x
+                  "
+                  type="image/jpg"
+                /> -->
               <img src="./images/mykhailo.jpg" alt="Михайло Єрмаков" />
+              <!-- </picture> -->
               <h2 class="team__name">Михайло Єрмаков</h2>
               <p class="team__text">UI Designer</p>
               <ul class="team__social-list">
