Ретинизировал изображения секции Team для всех устройств

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <ul class="team__list">
             <li class="team__card">
               <picture>
-                <!-- <source
+                <source
                   media="(min-width: 1200px)"
                   srcset="./images/igor-270.jpg 1x, ./images/igor-540.jpg 2x"
                   type="image/jpg"
@@ -165,7 +165,7 @@
                   media="(min-width: 768px)"
                   srcset="./images/igor-354.jpg 1x, ./images/igor-708.jpg 2x"
                   type="image/jpg"
-                /> -->
+                />
                 <source
                   media="(max-width: 767px)"
                   srcset="./images/igor-450.jpg 1x, ./images/igor-900.jpg 2x"
@@ -208,7 +208,7 @@
             </li>
             <li class="team__card">
               <picture>
-                <!-- <source
+                <source
                   media="(min-width: 1200px)"
                   srcset="./images/olga-270.jpg 1x, ./images/olga-540.jpg 2x"
                   type="image/jpg"
@@ -217,7 +217,7 @@
                   media="(min-width: 768px)"
                   srcset="./images/olga-354.jpg 1x, ./images/olga-708.jpg 2x"
                   type="image/jpg"
-                /> -->
+                />
                 <source
                   media="(max-width: 767px)"
                   srcset="./images/olga-450.jpg 1x, ./images/olga-900.jpg 2x"
@@ -260,7 +260,7 @@
             </li>
             <li class="team__card">
               <picture>
-                <!-- <source
+                <source
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/mykola-270.jpg 1x,
@@ -275,7 +275,7 @@
                     ./images/mykola-708.jpg 2x
                   "
                   type="image/jpg"
-                /> -->
+                />
                 <source
                   media="(max-width: 767px)"
                   srcset="
@@ -321,7 +321,7 @@
             </li>
             <li class="team__card">
               <picture>
-                <!-- <source
+                <source
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/mykhailo-270.jpg 1x,
@@ -336,7 +336,7 @@
                     ./images/mykhailo-708.jpg 2x
                   "
                   type="image/jpg"
-                /> -->
+                />
                 <source
                   media="(max-width: 767px)"
                   srcset="
