Ретинизировал изображения секции Portfolio для всех устройств

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio | Студія</title>
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <div class="container header__container">
         <div class="logo">
@@ -66,7 +68,9 @@
         </button>
       </div>
     </header>
+    <!-- main -->
     <main class="main">
+      <!-- section hero -->
       <section class="hero">
         <div class="hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -75,6 +79,7 @@
           </button>
         </div>
       </section>
+      <!-- section benefits -->
       <section class="benefits">
         <div class="benefits__container">
           <ul class="benefits__list">
@@ -128,6 +133,7 @@
           </ul>
         </div>
       </section>
+      <!-- section section  -->
       <section class="section">
         <div class="section__container">
           <h2 class="section__title">Чим ми займаємося</h2>
@@ -150,6 +156,7 @@
           </ul>
         </div>
       </section>
+      <!-- section team -->
       <section class="team">
         <div class="team__container">
           <h2 class="team__title">Наша команда</h2>
@@ -383,6 +390,7 @@
           </ul>
         </div>
       </section>
+      <!-- section client -->
       <section class="client">
         <div class="client__container">
           <h2 class="client__title">Постійні клієнти</h2>
@@ -433,6 +441,7 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
       <div class="container">
         <div class="container__logo-address">
@@ -525,6 +534,7 @@
         </div>
       </div>
     </footer>
+    <!-- modal window -->
     <div data-modal class="backdrop backdrop__hidden">
       <div class="modal">
         <div class="modal__container">
@@ -616,7 +626,7 @@
         </div>
       </div>
     </div>
-
+    <!-- mobile menu -->
     <div class="menu__container js-menu-container" id="mobile-menu">
       <button class="menu__toggle js-close-menu">
         <svg class="menu__toggle_icon" width="24" height="24">
@@ -669,7 +679,7 @@
         </ul>
       </div>
     </div>
-
+    <!-- js -->
     <script src="./js/menu.js"></script>
     <script src="./js/speaker.js"></script>
     <!-- <script src="./js/paddingforbody.js"></script> -->
